# omp-manager

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
scoop/: omp-manager.json
src/: detect.rs  install.rs  main.rs  themes.rs  ui.rs
